--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "concurrently": "^9.2.1",
     "eslint": "^9.9.0",
     "nodemon": "^3.1.4"
   }
