--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,22 +4,23 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start": "vite",              
-    "dev": "vite",                 
-    "build": "vite build",        
-    "preview": "vite preview",     
-    "lint": "eslint ."             
+    "start": "vite",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "lint": "eslint ."
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "axios": "^1.4.0"
+    "react-router-dom": "^7.8.2"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^5.0.0",
+    "@eslint/js": "^9.33.0",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
-    "@eslint/js": "^9.33.0",
+    "@vitejs/plugin-react": "^5.0.0",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
