--- a/package.json
+++ b/package.json
@@ -29,5 +29,9 @@
     "concurrently": "^8.2.2",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.12"
+  },
+  "dependencies": {
+    "dotenv": "^17.2.1",
+    "mongoose": "^8.18.0"
   }
 }
