--- a/backend/.env
+++ b/backend/.env
@@ -1,11 +1,10 @@
-MONGO_URI=mongodb+srv://projectmachinelearning067_db_user:93ixfQonemowwCoC@cluster0.qrz1la4.mongodb.net/TableDB?retryWrites=true&w=majority&appName=Cluster0
-
+﻿MONGO_URI=mongodb+srv://projectmachinelearning067_db_user:93ixfQonemowwCoC@cluster0.qrz1la4.mongodb.net/TableDB?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
 
-# Cloudinary
-CLOUDINARY_CLOUD_NAME=dgzgtk8mo
-CLOUDINARY_API_KEY=982525649139716
-CLOUDINARY_API_SECRET=K-V9mPPPQKyz4ZYB877W7vNOt28
+# Cloudinary Configuration
+CLOUDINARY_CLOUD_NAME=dcrtpaeew
+CLOUDINARY_API_KEY=355774955793164
+CLOUDINARY_API_SECRET=0ipMZ_bx7HKAnphR8jdQFCPZXD0
 
-# JWT
+# JWT Configuration
 JWT_SECRET=yourStrongJwtSecretKey
