--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,23 @@
-node_modules
+# Node modules
+node_modules/
+backend/node_modules/
+frontend/node_modules/
 
+# Environment files
+.env
+backend/.env
+frontend/.env
+
+# Uploads
+uploads/
+backend/uploads/
+frontend/uploads/
+
+# Logs
+logs/
+backend/logs/
+frontend/logs/
+
+# System files
+.DS_Store
+Thumbs.db
