--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "dotenv": "^17.2.1",
-    "mongoose": "^8.18.0"
+    "mongoose": "^8.18.0",
+    "winston": "^3.17.0"
   }
 }
