--- a/backend/.env
+++ b/backend/.env
@@ -3,12 +3,12 @@ PORT=5000
 NODE_ENV=development
 
 # Database Configuration
-MONGODB_URI=mongodb+srv://abhaybarman6758_db_user:mFX8WdFICMUIH4SY@clustertest.m3jnja0.mongodb.net/SpiceVilla?retryWrites=true&w=majority&appName=ClusterTest
+MONGODB_URI=mongodb+srv://projectmachinelearning067_db_user:UaVfzLcuKfbXtbvh@cluster0.vkfgyqb.mongodb.net/HospitalityManagement?retryWrites=true&w=majority&appName=Cluster0
 
+# JWT Secret
 JWT_SECRET=Ds8f7G3!kL9p@1xYz
 
-
-# 🌩 Cloudinary Credentials
-CLOUDINARY_CLOUD_NAME=dcrtpaeew
-CLOUDINARY_API_KEY=824365311674284
-CLOUDINARY_API_SECRET=SzUiDwDz7u69rNArLgLhD6jnyG4
+# Cloudinary Credentials
+CLOUDINARY_CLOUD_NAME=dgzgtk8mo
+CLOUDINARY_API_KEY=237614522288536
+CLOUDINARY_API_SECRET=augHlf2lPZKVy2Lgh4o3c9mzLog
