--- a/backend/.env
+++ b/backend/.env
@@ -3,12 +3,11 @@ PORT=5000
 NODE_ENV=development
 
 # Database Configuration
-MONGODB_URI=mongodb+srv://projectmachinelearning067_db_user:UaVfzLcuKfbXtbvh@cluster0.vkfgyqb.mongodb.net/HospitalityManagement?retryWrites=true&w=majority&appName=Cluster0
-
+MONGODB_URI=
 # JWT Secret
-JWT_SECRET=Ds8f7G3!kL9p@1xYz
+JWT_SECRET=
 
 # Cloudinary Credentials
-CLOUDINARY_CLOUD_NAME=dgzgtk8mo
-CLOUDINARY_API_KEY=237614522288536
-CLOUDINARY_API_SECRET=augHlf2lPZKVy2Lgh4o3c9mzLog
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
