--- a/backend/.env
+++ b/backend/.env
@@ -1,13 +1,15 @@
-# Server Configuration
+
+
 PORT=5000
 NODE_ENV=development
 
 # Database Configuration
-MONGODB_URI=
+MONGODB_URI=mongodb+srv://projectmachinelearning067_db_user:UaVfzLcuKfbXtbvh@cluster0.vkfgyqb.mongodb.net/HospitalityManagement?retryWrites=true&w=majority&appName=Cluster0
+
 # JWT Secret
-JWT_SECRET=
+JWT_SECRET=Ds8f7G3!kL9p@1xYz
 
 # Cloudinary Credentials
-CLOUDINARY_CLOUD_NAME=
-CLOUDINARY_API_KEY=
-CLOUDINARY_API_SECRET=
+CLOUDINARY_CLOUD_NAME=dgzgtk8mo
+CLOUDINARY_API_KEY=237614522288536
+CLOUDINARY_API_SECRET=augHlf2lPZKVy2Lgh4o3c9mzLog
