--- a/backend/.env
+++ b/backend/.env
@@ -11,4 +11,4 @@ JWT_SECRET=
 # Cloudinary Credentials
 CLOUDINARY_CLOUD_NAME=
 CLOUDINARY_API_KEY=
-CLOUDINARY_API_SECRET=
+CLOUDINARY_API_SECRET=a
