--- a/backend/.env
+++ b/backend/.env
@@ -5,10 +5,11 @@ NODE_ENV=
 
 # Database Configuration
 MONGODB_URI=
+
 # JWT Secret
 JWT_SECRET=
 
 # Cloudinary Credentials
 CLOUDINARY_CLOUD_NAME=
 CLOUDINARY_API_KEY=
-CLOUDINARY_API_SECRET=a
+CLOUDINARY_API_SECRET=
